<resources>
    <string name="app_name">WannaFootball</string>
    <string name="app_title">축구싶냐</string>
    <string name="next_login">건너뛰기</string>

    <!--Navigation View String-->
    <string name="nav_item_home">홈 화면</string>
    <string name="nav_item_my_info">내 정보</string>
    <string name="nav_item_team_info">내 팀 정보</string>
    <string name="nav_item_create_team">팀 생성</string>
    <string name="nav_item_search_team">팀 검색</string>
    <string name="nav_item_play_matching">경기 매칭</string>
    <string name="nav_item_enroll_matching_team">매칭 등록</string>

    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_team_picture">팀 사진</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="double_exit_button_click">한 번더 누르시면 앱이 종료됩니다.</string>

    <string name="home_bottom_search_match_text">매치검색</string>
    <string name="home_bottom_enroll_match_text">매치등록</string>
    <string name="home_bottom_home_text">홈</string>
    <string name="home_bottom_search_team_text">팀검색</string>
    <string name="home_bottom_my_info_text">내정보</string>

    <!-- login -->
    <string name="logout_fail_message">로그아웃을 실패했습니다.</string>

    <!-- My Info Fragment -->
    <string name="revise_my_info">내 정보 수정하기</string>
    <string name="profile_name">박민현</string>
    <string name="profile_player">선수</string>
    <string name="profile_player_age">선수 나이:</string>
    <string name="profile_age">살</string>
    <string name="profile_player_team">선수 소속팀:</string>
    <string name="profile_player_age_temp">27</string>
    <string name="profile_player_team_name_temp">소속된 팀이 없습니다.</string>

    <string name="user_nessesary_login">로그인이 필요합니다. 로그인 하세요</string>
    <string name="user_login_text">로그인 하기</string>

    <!-- Team Info Fragment -->
    <string name="revise_team_info">팀 정보 수정하기</string>
    <string name="profile_team_name">팀명:</string>
    <string name="profile_team_score">점수:</string>
    <string name="profile_team_score_text">점</string>
    <string name="profile_team_leader">주장:</string>
    <string name="profile_team_number">팀원 수:</string>
    <string name="profile_team_phone_number">팀 연락처:</string>

    <string name="user_create_team_message"> 현재 소속된 팀이 없습니다. 팀을 생성해주세요.</string>
    <string name="user_create_team">팀 생성하기</string>

    <!-- search Team -->
    <string name="type_soccer">축구</string>
    <string name="search_type_location">활동 지역</string>
    <string name="search_type_team_name">팀명</string>

    <string name="type_footsal">풋살</string>
    <string name="type_search_team_text">검색 유형</string>
</resources>

