<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_my_info"
            android:checked="true"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_item_my_info" />

        <item
            android:id="@+id/navigation_item_create_team"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/nav_item_create_team" />

        <item
            android:id="@+id/navigation_item_search_team"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_item_search_team" />

        <item
            android:id="@+id/navigation_item_search_matching"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/nav_item_play_matching" />

        <item
            android:id="@+id/navigation_item_enroll_matching"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_enroll_matching_team" />

    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/navigation_item_images"
                android:icon="@drawable/ic_image"
                android:title="@string/nav_sub_menu_team_picture" />
        </menu>
    </item>

</menu>
