<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_item_home" />

        <item
            android:id="@+id/navigation_item_my_info"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_item_my_info" />

        <item
            android:id="@+id/navigation_item_create_team"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/nav_item_create_team" />

        <item
            android:id="@+id/navigation_item_search_team"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_item_search_team" />

        <item
            android:id="@+id/navigation_item_search_matching"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/nav_item_play_matching" />

        <item
            android:id="@+id/navigation_item_enroll_matching"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_enroll_matching_team" />

    </group>


</menu>
